fix: align the height of the three bars of the home page

--- a/src/components/homepage_components/DisplayBoard.scss
+++ b/src/components/homepage_components/DisplayBoard.scss
@@ -34,62 +34,61 @@
     .join-container {
         width: 20%;
         padding-left: 5px;
+        display: flex;
+        flex-direction: column;
         .join-wrapper {
-            padding: 5px 0;
             position: relative;
-            height: 66.67%;
-            .join-wrapper-content {
+            flex-grow: 2;
+            flex-basis: 0px;
+            overflow: hidden;
+            .join-wrapper-content-padding {
+                padding: 5px 0;
                 height: 100%;
-                overflow: hidden;
-                .join-img {
-                    width: 100%;
-                }
+                .join-wrapper-content {
+                    height: inherit;
+                    overflow: hidden;
+                    .join-img {
+                        width: 100%;
+                    }
 
-                .join-logo {
-                    width: 100%;
-                }
+                    .join-logo {
+                        width: 100%;
+                    }
 
-                .join-btn-group {
-                    position: absolute;
-                    width: 70%;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                }
+                    .join-btn-group {
+                        position: absolute;
+                        width: 70%;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                    }
 
-                .join-btn {
-                    border-radius: 2px;
-                    width: 100%;
-                    background-color: rgba(#606060, 0.93);
-                    border: none;
-                    color: #e9e9e9;
-                    font-size: 16px;
-                    margin-bottom: 10px;
-                    height: 36px;
+                    .join-btn {
+                        border-radius: 2px;
+                        width: 100%;
+                        background-color: rgba(#606060, 0.93);
+                        border: none;
+                        color: #e9e9e9;
+                        font-size: 16px;
+                        margin-bottom: 10px;
+                        height: 36px;
+                    }
                 }
             }
         }
 
         // TODO: modify the image so that the heigth of its parent container does not change
         .ad {
-            height: 33.33%;
-            padding: 5px 0;
-            .ad-img {
-                display: inline;
-                // display: none;
-                width: 100%;
-                height: 100%;
-                // height: 50%;
+            flex: 1 1 0;
+            overflow: hidden;
+            .ad-padding-container {
+                padding: 5px 0;
+                .ad-img {
+                    display: block;
+                    width: 100%;
+                }
             }
         }
-        // .ad {
-        //     display: block;
-        //     // display: none;
-            
-        //     width: 100%;
-        //     // flex: 1 1 66.67%;
-        //     height: 33.33%;
-        // }
     }
 }
 
